<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/detailsPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/pokemonAvatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="60dp"
                    android:minHeight="60dp"/>

                <TextView
                    android:id="@+id/pokemonName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:textSize="25sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/weightPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:visibility="invisible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    style="@style/AttributeTextView"/>

                <TextView
                    android:id="@+id/weightLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    style="@style/AttributeValueTextView"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/baseXPPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:visibility="invisible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/base_xp"
                    style="@style/AttributeTextView"/>

                <TextView
                    android:id="@+id/baseXPLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    style="@style/AttributeValueTextView"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/typesPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:visibility="invisible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/types"
                    style="@style/AttributeTextView"/>

                <TextView
                    android:id="@+id/typesLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    style="@style/AttributeValueTextView"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/abilitiesPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:visibility="invisible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abilities"
                    style="@style/AttributeTextView"/>

                <TextView
                    android:id="@+id/abilitiesLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    style="@style/AttributeValueTextView"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/statsPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:visibility="invisible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stats"
                    style="@style/AttributeTextView"/>

                <TextView
                    android:id="@+id/statsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    style="@style/AttributeValueTextView"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include
        layout="@layout/progress_layout"
        android:visibility="gone"/>
</FrameLayout>